# timis

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  entrypoint.sh  netlify.toml  render.yaml
api/: openapi.yaml  swagger.yaml
backend/: Cargo.toml
backend/crates/timis-ai/: Cargo.toml
backend/crates/timis-ai/src/: anomaly_detection.rs  client.rs  dispute_advisor.rs  lease_analyzer.rs  legal_assistant.rs  lib.rs  renewal_briefing.rs  router.rs  score_explainer.rs  vacancy_copy.rs
backend/crates/timis-api/: Cargo.toml  openapi.yaml
backend/crates/timis-api/src/: main.rs  state.rs
backend/crates/timis-api/src/graphql/: mod.rs  mutation.rs  query.rs  types.rs
backend/crates/timis-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  tenant_ctx.rs
backend/crates/timis-api/src/rest/: ai.rs  auth.rs  dashboard.rs  docs.rs  health.rs  mod.rs  mpesa_webhook.rs  org.rs  properties.rs  tenants.rs  upload.rs
backend/crates/timis-auth/: Cargo.toml
backend/crates/timis-auth/src/: jwt.rs  password.rs  rbac.rs
backend/crates/timis-comms/: Cargo.toml
backend/crates/timis-comms/src/: email.rs  sms.rs
backend/crates/timis-core/: Cargo.toml
backend/crates/timis-core/src/: config.rs  errors.rs  lib.rs  types.rs
backend/crates/timis-core/src/models/: dispute.rs  lease.rs  maintenance.rs  mod.rs  notification.rs  payment.rs  score.rs  tenant.rs  unit.rs
backend/crates/timis-db/: Cargo.toml
backend/crates/timis-db/src/: lib.rs  migrations.rs  multi_tenant.rs  pool.rs
backend/crates/timis-db/src/repos/: dispute_repo.rs  lease_repo.rs  maintenance_repo.rs  mod.rs  payment_repo.rs  score_repo.rs  tenant_repo.rs  unit_repo.rs
backend/crates/timis-mpesa/: Cargo.toml
backend/crates/timis-mpesa/src/: b2c.rs  c2b.rs  client.rs  lib.rs  reconcile.rs  stk_push.rs
backend/crates/timis-worker/: Cargo.toml
backend/crates/timis-worker/src/: jobs.rs  main.rs
database/: schema.sql  seed.sql
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker
docker/nginx/: nginx.conf
docs/: 01-architecture.md  08-ai-integration.md  09-mpesa-integration.md  10-security-threat-model.md  11-mvp-roadmap.md  DEPLOYMENT.md
frontend/: .env.local  COMPONENT_TREE.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/public/: manifest.json  sw.js
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(public)/: page.tsx
frontend/src/app/(public)/pricing/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/ai/: page.tsx
frontend/src/app/dashboard/disputes/: page.tsx
frontend/src/app/dashboard/finance/: page.tsx
frontend/src/app/dashboard/leases/: page.tsx
frontend/src/app/dashboard/maintenance/: page.tsx
frontend/src/app/dashboard/properties/: page.tsx
frontend/src/app/dashboard/reports/: page.tsx
frontend/src/app/dashboard/scores/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/tenants/: page.tsx
frontend/src/app/tenant/: layout.tsx  page.tsx
frontend/src/app/tenant/disputes/: page.tsx
frontend/src/components/: Providers.tsx
frontend/src/components/finance/: MpesaPayButton.tsx
frontend/src/components/layout/: BottomNav.tsx  LangToggle.tsx  Sidebar.tsx  ThemeToggle.tsx  TopBar.tsx
frontend/src/components/score/: ScoreGauge.tsx
frontend/src/components/timis/: AIChatWidget.tsx  ActivityFeedItem.tsx  BottomTabBar.tsx  DisputeCard.tsx  EmptyState.tsx  LeaseExpiryBadge.tsx  MPesaReceiptToast.tsx  MaintenanceTimeline.tsx  PaymentStatusPill.tsx  SidebarNav.tsx  SkeletonCard.tsx  StatCard.tsx  TimisButton.tsx  TimisInput.tsx  TimisScoreCard.tsx  UnitCard.tsx  UpgradeModal.tsx  index.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  FileUpload.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  Select.tsx  Spinner.tsx  Table.tsx  Toast.tsx
frontend/src/hooks/: useAuth.ts  useGraphQL.ts  useKiroScore.ts  useMpesa.ts  useNotifications.ts  useWebSocket.ts
frontend/src/lib/: apollo-client.ts  constants.ts  formatters.ts  plans.ts  session.ts  validators.ts
frontend/src/stores/: authStore.ts  notificationStore.ts  themeStore.ts
frontend/src/styles/: globals.css
graphql/: schema.graphql
(+12 files in other folders)
