[package]
name = "timis-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "timis-api"
path = "src/main.rs"

[dependencies]
timis-core = { path = "../timis-core" }
timis-db = { path = "../timis-db" }
timis-auth = { path = "../timis-auth" }
timis-mpesa = { path = "../timis-mpesa" }
timis-ai = { path = "../timis-ai" }
timis-comms = { path = "../timis-comms" }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
reqwest = { workspace = true }
