[package]
name = "timis-mpesa"
version.workspace = true
edition.workspace = true

[dependencies]
timis-core = { path = "../timis-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
