[package]
name = "timis-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "timis-worker"
path = "src/main.rs"

[dependencies]
timis-core = { path = "../timis-core" }
timis-db = { path = "../timis-db" }
timis-comms = { path = "../timis-comms" }
timis-ai = { path = "../timis-ai" }
tokio = { workspace = true }
sqlx = { workspace = true }
lapin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
